# local-customer-time-tracker

./: .gitignore  LICENSE  README.md  fix-macos.sh  index.html  package-lock.json  package.json  tailwind.config.js
.github/: CODEOWNERS
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/customer/: CustomerSelector.tsx  ManageCustomersScreen.tsx  NewCustomerScreen.tsx
src/components/home/: HomeScreen.tsx
src/components/hours/: HoursSummary.tsx  TimeLogScreen.tsx
src/components/layout/: ScreenHeader.tsx  TitleBar.tsx
src/components/settings/: SettingsScreen.tsx
src/components/timer/: TimerControls.tsx  TimerDisplay.tsx
src/components/ui/: dialog.tsx  input.tsx  label.tsx  select.tsx
src/lib/: utils.ts
src/store/: customerStore.ts  index.ts  settingsStore.ts  timerStore.ts  uiStore.ts
src/types/: index.ts
